<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FlippedClass</string>
    <string name="hello_world">Hello world!</string>
    <string name="str_item_logout">登出</string>
    <string name="str_item_ChangePw">修改密碼</string>
    <string name="str_item_showinfo">說明</string> 
    <string name="str_action_sidebar">Sidebar Button</string>
    <string name="str_action_choosecourse">Choose Course</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
	<string name="str_action_edit_info">edit_info</string>
	<string-array name="list_title">
	    <item>首頁</item>
        <item>點名</item>
        <item>考試</item>
        <item>速貼</item>
        <item>分組</item>
        <item>設定</item>
	</string-array>
	<string name="open_left_drawer">open_left_drawer</string>
	<string name="close_left_drawer">close_left_drawer</string>
	
    
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Push Notifications</string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
	
</resources>
